--- a/pages/prenotazioni/planning/planning.css
+++ b/pages/prenotazioni/planning/planning.css
@@ -19,6 +19,7 @@
 }
 .sbarra{
     --sbarra-border:rgb(186, 186, 186);
+    cursor: pointer;
 }
 .sbarra_start {
     border-top: solid var(--sbarra-border) 2px!important;
@@ -51,6 +52,44 @@
 }
 .sbarra_hovered{
     background-color: rgba(var(--base-bg-primary-rgb),0.1)!important;
+    --sbarra-border:var(--base-bg-primary);
+    box-shadow: 0 0 0 2px var(--sbarra-border); 
+}
+.seduta{
+    --sbarra-border:rgb(186, 186, 186);
+}
+.seduta_start {
+    border-top: solid var(--sbarra-border) 2px!important;
+    background-color: rgba(var(--base-bg-tertiary-rgb),0.2)!important;
+}
+.seduta_middle {
+    background-color: rgba(var(--base-bg-tertiary-rgb),0.2)!important;
+}
+.seduta_end{
+    border-bottom: solid var(--sbarra-border) 2px!important;
+    background-color: rgba(var(--base-bg-tertiary-rgb),0.2)!important;
+}
+.seduta_start.first{
+    border-left: solid var(--sbarra-border) 2px!important;
+}
+.seduta_start.last{
+    border-right: solid var(--sbarra-border) 2px!important;
+}
+.seduta_middle.first{
+    border-left: solid var(--sbarra-border) 2px!important;
+}
+.seduta_middle.last{
+    border-right: solid var(--sbarra-border) 2px!important;
+}
+.seduta_end.first{
+    border-left: solid var(--sbarra-border) 2px!important;
+}
+.seduta_end.last{
+    border-right: solid var(--sbarra-border) 2px!important;
+}
+.seduta_hovered{
+    cursor: pointer;
+    background-color: rgba(var(--base-bg-tertiary-rgb),0.1)!important;
     --sbarra-border:var(--base-bg-primary);
     box-shadow: 0 0 0 2px var(--sbarra-border); 
 }
