--- a/modal_component/percorsi_pagamenti/percorsi_pagamenti.css
+++ b/modal_component/percorsi_pagamenti/percorsi_pagamenti.css
@@ -1,52 +1,36 @@
-.cc1{
-    flex: 0 0 auto;
-    width: 10%;
+.table-responsive:not(.title) {
+    border: solid rgba(128, 128, 128, 0.501) 1px;
+    border-radius: 5px;
 }
-.cc2{
-    flex: 1 1 auto;
+.fattura_row{
+    padding: 10px;
+    height: 50px!important;
 }
-.cc3{
-    flex: 0 0 auto;
-    width: 10%;
+.fattura_row.checked{
+    background-color: var(--base-bg-light);
 }
-.cc4{
-    flex: 0 0 auto;
-    width: 15%;
-}
-
-.cs1{
-    flex: 0 0 auto;
-    width: 5%;
-}
-.cs2{
-    flex: 1 1 auto;
-}
-.cs3{
-    flex: 0 0 auto;
-    width: 30%;
-}
-
-.csp1{
-    flex: 1 1 auto;
-}
-.csp2{
-    flex: 0 0 auto;
-    width: 15%;
-}
-.csp3{
-    flex: 0 0 auto;
+.titles > .cc1,
+.flex-row > .cc1 {
     width: 5%;
 }
 
-.titles{
-    padding-bottom:8px;
-    padding-left:20px;
-    padding-right:40px;
-    padding-top:8px;
+.titles > .cc4,
+.flex-row > .cc4 {
+    width: 23%;
 }
-.delHover:hover{
-    cursor: pointer;
+
+.d-flex {
+    display: flex;
 }
-.statoHover:hover{
-    cursor: pointer;
+
+.align-items-center {
+    align-items: center;
+}
+
+.justify-content-center {
+    justify-content: center;
+}
+
+.text-center {
+    text-align: center;
 }
