--- a/assets/css/bootstrap-5.3.3.css
+++ b/assets/css/bootstrap-5.3.3.css
@@ -573,6 +573,7 @@ color-scheme: dark;
 .success:hover {
     background-color: var(--base-active-bg-primary) !important;
     cursor: pointer;
+    color:white!important;
 }
 .success:hover > td{
     color:white!important;
@@ -580,6 +581,7 @@ color-scheme: dark;
 .success2:hover {
     background-color: var(--base-active-bg-secondary) !important;
     cursor: pointer;
+    color:white!important;
 }
 .success2:hover > td{
     color:white!important;
@@ -587,6 +589,7 @@ color-scheme: dark;
 .success3:hover {
     background-color: var(--base-active-bg-tertiary) !important;
     cursor: pointer;
+    color:white!important;
 }
 .success3:hover > td{
     color:white!important;
@@ -6033,41 +6036,61 @@ border-bottom-left-radius: var(--bs-modal-inner-border-radius);
 margin: calc(var(--bs-modal-footer-gap) * 0.5);
 }
 
-@media (min-width: 576px) {
+
+@media (max-width: 300px) {
+    .modal-sm,
+    .modal-lg,
+    .modal-xl, 
+    .modal-xxl {
+        --bs-modal-width: 100vw;
+        width: 100vw;
+        max-width: none;
+        height: 100%;
+        margin: 0;
+    }
+}
+
 .modal {
---bs-modal-margin: 1.75rem;
---bs-modal-box-shadow: var(--bs-box-shadow);
+    --bs-modal-margin: 1.75rem;
+    --bs-modal-box-shadow: var(--bs-box-shadow);
 }
 .modal-dialog {
     max-width: var(--bs-modal-width);
     margin-right: auto;
     margin-left: auto;
 }
-.modal-sm {
+@media (min-width: 576px) {
+    .modal-sm {
         --bs-modal-width: 300px;
     }
 }
-@media (min-width: 992px) {
+@media (max-width: 992px) {
     .modal-lg,
     .modal-xl {
         --bs-modal-width: 800px;
+    }
+    .modal-xxl {
+        --bs-modal-width: 100vw;
+        width: 90vw;
+        max-width: none;
+        height: 90%;
+        margin: 0;
     }
 }
 @media (min-width: 1200px) {
     .modal-xl {
         --bs-modal-width: 1140px;
     }
-}
-@media (min-width: 1600px) {
     .modal-xxl {
-        --bs-modal-width: 1600px;
+        --bs-modal-width: 90vw;
     }
 }
+
 .modal-fullscreen {
-width: 100vw;
-max-width: none;
-height: 100%;
-margin: 0;
+    width: 100vw;
+    max-width: none;
+    height: 100%;
+    margin: 0;
 }
 .modal-fullscreen .modal-content {
 height: 100%;
