--- a/modal_component/percorsi/percorsi.css
+++ b/modal_component/percorsi/percorsi.css
@@ -7,7 +7,7 @@
 }
 .cc3{
     flex: 0 0 auto;
-    width: 10%;
+    width: 15%;
 }
 .cc4{
     flex: 0 0 auto;
@@ -16,15 +16,12 @@
 
 .cs1{
     flex: 0 0 auto;
-    width: 5%;
+    width: 30%;
 }
 .cs2{
     flex: 1 1 auto;
 }
-.cs3{
-    flex: 0 0 auto;
-    width: 30%;
-}
+
 
 .csp1{
     flex: 1 1 auto;
@@ -37,12 +34,23 @@
     flex: 0 0 auto;
     width: 5%;
 }
-
-.titles{
+.csp4{
+    flex: 0 0 auto;
+    width: 30%;
+}
+.titles,.seduta-titles{
     padding-bottom:8px;
     padding-left:20px;
     padding-right:40px;
     padding-top:8px;
+}
+@media (max-width:768px) {
+    .seduta-titles{
+        padding-bottom:8px!important;
+        padding-left:2px!important;
+        padding-right:4px!important;
+        padding-top:8px!important;
+    }
 }
 .delHover:hover{
     cursor: pointer;
