--- a/pages/prenotazioni/planning/planning.css
+++ b/pages/prenotazioni/planning/planning.css
@@ -1,3 +1,11 @@
+.table-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+.planning-table {
+    width: 100%;
+}
 .planning-date:hover{
     cursor: pointer;
 }
@@ -17,6 +25,85 @@
 .table-separate{
     border-collapse: separate;
 }
+
+.seduta{
+    --seduta-border:rgb(186, 186, 186);
+    cursor: pointer;
+}
+.seduta_start {
+    border-top: solid var(--seduta-border) 2px!important;
+    background-color: rgba(var(--base-bg-primary-rgb),0.2)!important;
+}
+.seduta_middle {
+    background-color: rgba(var(--base-bg-primary-rgb),0.2)!important;
+}
+.seduta_end{
+    border-bottom: solid var(--seduta-border) 2px!important;
+    background-color: rgba(var(--base-bg-primary-rgb),0.2)!important;
+}
+.seduta_start.first{
+    border-left: solid var(--seduta-border) 2px!important;
+}
+.seduta_start.last{
+    border-right: solid var(--seduta-border) 2px!important;
+}
+.seduta_middle.first{
+    border-left: solid var(--seduta-border) 2px!important;
+}
+.seduta_middle.last{
+    border-right: solid var(--seduta-border) 2px!important;
+}
+.seduta_end.first{
+    border-left: solid var(--seduta-border) 2px!important;
+}
+.seduta_end.last{
+    border-right: solid var(--seduta-border) 2px!important;
+}
+.seduta_hovered{
+    background-color: rgba(var(--base-bg-primary-rgb),0.1)!important;
+    --seduta-border:var(--base-bg-primary);
+    box-shadow: 0 0 0 2px var(--seduta-border); 
+}
+
+.corso{
+    --corso-border:rgb(186, 186, 186);
+    cursor: pointer;
+}
+.corso_start {
+    border-top: solid var(--corso-border) 2px!important;
+    background-color: rgba(var(--base-bg-primary-rgb),0.2)!important;
+}
+.corso_middle {
+    background-color: rgba(var(--base-bg-primary-rgb),0.2)!important;
+}
+.corso_end{
+    border-bottom: solid var(--corso-border) 2px!important;
+    background-color: rgba(var(--base-bg-primary-rgb),0.2)!important;
+}
+.corso_start.first{
+    border-left: solid var(--corso-border) 2px!important;
+}
+.corso_start.last{
+    border-right: solid var(--corso-border) 2px!important;
+}
+.corso_middle.first{
+    border-left: solid var(--corso-border) 2px!important;
+}
+.corso_middle.last{
+    border-right: solid var(--corso-border) 2px!important;
+}
+.corso_end.first{
+    border-left: solid var(--corso-border) 2px!important;
+}
+.corso_end.last{
+    border-right: solid var(--corso-border) 2px!important;
+}
+.corso_hovered{
+    background-color: rgba(var(--base-bg-primary-rgb),0.1)!important;
+    --corso-border:var(--base-bg-primary);
+    box-shadow: 0 0 0 2px var(--corso-border); 
+}
+
 .sbarra{
     --sbarra-border:rgb(186, 186, 186);
     cursor: pointer;
@@ -52,44 +139,6 @@
 }
 .sbarra_hovered{
     background-color: rgba(var(--base-bg-primary-rgb),0.1)!important;
-    --sbarra-border:var(--base-bg-primary);
-    box-shadow: 0 0 0 2px var(--sbarra-border); 
-}
-.seduta{
-    --sbarra-border:rgb(186, 186, 186);
-}
-.seduta_start {
-    border-top: solid var(--sbarra-border) 2px!important;
-    background-color: rgba(var(--base-bg-tertiary-rgb),0.2)!important;
-}
-.seduta_middle {
-    background-color: rgba(var(--base-bg-tertiary-rgb),0.2)!important;
-}
-.seduta_end{
-    border-bottom: solid var(--sbarra-border) 2px!important;
-    background-color: rgba(var(--base-bg-tertiary-rgb),0.2)!important;
-}
-.seduta_start.first{
-    border-left: solid var(--sbarra-border) 2px!important;
-}
-.seduta_start.last{
-    border-right: solid var(--sbarra-border) 2px!important;
-}
-.seduta_middle.first{
-    border-left: solid var(--sbarra-border) 2px!important;
-}
-.seduta_middle.last{
-    border-right: solid var(--sbarra-border) 2px!important;
-}
-.seduta_end.first{
-    border-left: solid var(--sbarra-border) 2px!important;
-}
-.seduta_end.last{
-    border-right: solid var(--sbarra-border) 2px!important;
-}
-.seduta_hovered{
-    cursor: pointer;
-    background-color: rgba(var(--base-bg-tertiary-rgb),0.1)!important;
     --sbarra-border:var(--base-bg-primary);
     box-shadow: 0 0 0 2px var(--sbarra-border); 
 }
