--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,13 +107,35 @@
     padding-left:11px!important;
 }
 
+.w-md-50{
+    width: 50%!important;
+}
+
+.w-md-30{
+    width: 30%!important;
+}
+
+.w-md-20{
+    width: 20%!important;
+}
+
+.w-md-60{
+    width: 60%!important;
+}
+
 @media (max-width: 768px) {
+
+    .w-md-20,.w-md-30,.w-md-50,.w-md-60{
+        width: 100% !important;
+    }
+
     .modal-dialog{
         width: 100vw!important;
         max-width: none!important;
         height: 100%!important;
         margin: 0!important;
     }
+
     .page-content,.page-content.menu-hidden{
         margin-left:0!important;
         margin-top:40px!important;
