--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,6 +124,10 @@
 }
 
 @media (max-width: 768px) {
+    .table {
+        margin-bottom: 0!important;
+    }
+
     .card{
         padding: 2%!important;
     } 
