--- a/modal_component/percorsi_corsi/percorsi_corsi.css
+++ b/modal_component/percorsi_corsi/percorsi_corsi.css
@@ -1,6 +1,8 @@
 .percorsi-row{
     min-height: 50px;
-    padding-top: 13px;
     border: solid rgba(128, 128, 128, 0.501) 1px;
     border-radius: 5px;
+    justify-content: center;
+    align-items: center;
+    padding: 10px 0;
 }
