--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,16 +107,25 @@
     padding-left:11px!important;
 }
 
-.w-md-50{
-    width: 50%!important;
+
+.w-md-20{
+    width: 20%!important;
+}
+
+.w-md-25{
+    width: 25%!important;
 }
 
 .w-md-30{
     width: 30%!important;
 }
 
-.w-md-20{
-    width: 20%!important;
+.w-md-41{
+    width: 41.66666667%!important;
+}
+
+.w-md-50{
+    width: 50%!important;
 }
 
 .w-md-60{
@@ -141,7 +150,7 @@
         border: none!important;
     }
 
-    .w-md-20,.w-md-30,.w-md-50,.w-md-60{
+    .w-md-20,.w-md-25,.w-md-30,.w-md-41,.w-md-50,.w-md-60{
         width: 100% !important;
     }
 
