--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,6 +107,9 @@
     padding-left:11px!important;
 }
 
+.w-md-10{
+    width: 10%!important;
+}
 
 .w-md-20{
     width: 20%!important;
@@ -150,7 +153,7 @@
         border: none!important;
     }
 
-    .w-md-20,.w-md-25,.w-md-30,.w-md-41,.w-md-50,.w-md-60{
+    .w-md-10,.w-md-20,.w-md-25,.w-md-30,.w-md-41,.w-md-50,.w-md-60{
         width: 100% !important;
     }
 
