--- a/assets/css/bootstrap-5.3.3.css
+++ b/assets/css/bootstrap-5.3.3.css
@@ -9312,6 +9312,10 @@ fieldset:disabled .btn {
 	height: 75% !important;
 }
 
+.h-90 {
+	height: 90% !important;
+}
+
 .h-100 {
 	height: 100% !important;
 }
