--- a/assets/css/bootstrap-5.3.3.css
+++ b/assets/css/bootstrap-5.3.3.css
@@ -9261,6 +9261,11 @@ fieldset:disabled .btn {
     min-width: 140px !important;
 }
 
+.w-40 {
+	width: 40% !important;
+    min-width: 140px !important;
+}
+
 .w-50 {
 	width: 50% !important;
 }
