--- a/assets/css/bootstrap-5.3.3.css
+++ b/assets/css/bootstrap-5.3.3.css
@@ -6938,6 +6938,9 @@ fieldset:disabled .btn {
 }
 
 @media (min-width: 1200px) {
+	.modal-lg{
+		--bs-modal-width: 800px;
+	}
 	.modal-xl {
 		--bs-modal-width: 1140px;
 	}
