--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,6 +115,10 @@
     width: 20%!important;
 }
 
+.w-md-23{
+    width: 23%!important;
+}
+
 .w-md-25{
     width: 25%!important;
 }
@@ -168,7 +172,7 @@
         border: none!important;
     }
 
-    .w-md-10,.w-md-20,.w-md-25,.w-md-30,.w-md-41,.w-md-50,.w-md-60,.w-md-90{
+    .w-md-10,.w-md-20,.w-md-23,.w-md-25,.w-md-30,.w-md-41,.w-md-50,.w-md-60,.w-md-90{
         width: 100% !important;
     }
 
