--- a/components/planning/planning.css
+++ b/components/planning/planning.css
@@ -3,6 +3,10 @@
 table,td{
     cursor: pointer;
 }
+td {
+    word-wrap: break-word;
+    white-space: normal;
+}  
 .table-container {
     display: flex;
     flex-wrap: wrap;
