--- a/modal_component/percorsi/percorsi.css
+++ b/modal_component/percorsi/percorsi.css
@@ -25,8 +25,6 @@
 .cs2{
     flex: 1 1 auto;
 }
-
-
 .csp1{
     flex: 1 1 auto;
 }
@@ -64,4 +62,14 @@
 }
 .accordion-button{
     min-height: 50px!important;
+}
+
+div.Debitore{
+    background-color: var(--bs-danger)!important;
+}
+div.Parziale{
+    background-color: var(--bs-warning)!important;
+}
+div.Completato, div.Concluso{
+    background-color: var(--bs-green)!important;
 }
