--- a/pages/pagamenti/sedute/sedute.css
+++ b/pages/pagamenti/sedute/sedute.css
@@ -1,6 +1,6 @@
 td,th {
-    white-space: normal;
-    word-break: break-word;
+    white-space: normal!important;
+    word-break: break-word!important;
 }
 
 .filter-labels{
